--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded"
-                  src="img/testimonial-1.jpg"
+                  src="img/testimonial.jpg"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
@@ -355,7 +355,7 @@
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded"
-                  src="img/testimonial-2.jpg"
+                  src="img/testimonial.jpg"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
@@ -374,7 +374,7 @@
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded"
-                  src="img/testimonial-3.jpg"
+                  src="img/testimonial.jpg"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
@@ -393,7 +393,7 @@
               <div class="d-flex align-items-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded"
-                  src="img/testimonial-4.jpg"
+                  src="img/testimonial.jpg"
                   style="width: 50px; height: 50px"
                 />
                 <div class="ps-3">
